some deployment file uploaded